# flatrtree-py

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: actions.yml
src/flatrtree/: __init__.py  __init__.pyi  box_dist.pyi  box_dist.pyx  hilbert_builder.pyi  hilbert_builder.pyx  omt_builder.pyi  omt_builder.pyx  rtree.py  serialization.py
src/flatrtree/internal/: flatrtree_pb2.py  flatrtree_pb2.pyi
tests/: test_builders.py  test_rtree.py  test_serialization.py  utils.py
