[metadata]
name = flatrtree
version = 1.0.0rc1
description = Tiny, portable R-trees.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/flatrtree/flatrtree-py
author = Daniel Whalen
author_email = daniel.r.whalen@gmail.com
license = MIT

[options]
packages = find:
package_dir =
    =src
install_requires = protobuf
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.extras_require]
test =
    pytest
    pytest-subtests
ci =
    black
    isort
    mypy
    types-protobuf
bench = pygeos

[options.packages.find]
where = src
exclude =
    benchmarks
    tests
